--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,5 +1,7 @@
-
 Flask==2.3.3
 Flask-CORS==4.0.0
-torch==2.4.0
-transformers==4.36.2
+numpy==1.25.2
+scipy==1.11.2
+transformers==4.35.0
+torch==2.1.0
+zxcvbn==4.4.28
